--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/onskelistefilip
+#spring.datasource.username=root
+#spring.datasource.password=bøfwellington
+spring.datasource.url=jdbc:mysql://localhost:3306/onskelistefilip
+spring.datasource.username=root
+spring.datasource.password=bøfwellington
