--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,23 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.example.onskeliste.OnskelisteApplication</mainClass>
+                    <layout>JAR</layout>
+                </configuration>
             </plugin>
+
+
         </plugins>
     </build>
 
